fix(article-preview): truncate title

--- a/src/components/article-preview/styles.module.scss
+++ b/src/components/article-preview/styles.module.scss
@@ -104,9 +104,24 @@
 		margin-block-end: t2c(32, xl);
 		color: $blue_cobalt;
 		font-family: $font_quicksand;
-		font-size: locks(24, 36);
+		font-size: locks(24, 34);
 		font-weight: 400;
-		line-height: 1.1;
+
+		@include truncate_multiline_text(
+			$breakpoint: 2,
+			$lh: 1.1,
+			$min-height: true);
+
+		@include breakpoint(l) {
+			@include truncate_multiline_text(
+				$breakpoint: 1,
+				$lh: 1.1,
+				$min-height: true);
+		}
+
+		@include breakpoint(xl) {
+			font-size: t2c(34, xl);
+		}
 	}
 
 	&__excerpt {
